Image issue and Link issue fixed

--- a/_includes/hero.html
+++ b/_includes/hero.html
@@ -6,8 +6,8 @@
       <p class="hero-subtitle">Elegance Redefined</p>
       <p class="hero-description">Discover our exclusive collection of high-end fashion</p>
       <div class="hero-buttons">
-        <a href="{{ site.baseurl }}/products.html" class="btn-primary">Shop Now</a>
-        <a href="{{ site.baseurl }}/exclusive-products.md" class="btn-secondary">Exclusive Collection</a>
+        <a href="{{ '/products/' | relative_url }}" class="btn-primary">Shop Now</a>
+        <a href="{{ '/exclusive-products/' | relative_url }}" class="btn-secondary">Exclusive Collection</a>
       </div>
     </div>
     <div class="scroll-indicator">
