--- a/_layouts/product-details.html
+++ b/_layouts/product-details.html
@@ -313,8 +313,8 @@ layout: home
 
         <div class="pd-info-section">
             <p class="pd-breadcrumbs">
-                <a href="{{ site.baseurl }}/index.html">Home</a> / 
-                <a href="{{ site.baseurl }}/products.html">Collection</a> /
+                <a href="{{ '///' | relative_url }}">Home</a> / 
+                <a href="{{ '/products/' | relative_url }}">Collection</a> /
                 {{ page.category }}
             </p>
 
@@ -370,8 +370,8 @@ layout: home
             </div>
 
             <div class="pd-action-block">
-                <a href="{{ site.baseurl }}/contact?product={{ page.name | url_encode }}" class="btn-buy">Inquire Now</a>
-                <a href="{{ site.baseurl }}/" style="text-decoration: none;" class="btn-whatsapp" title="Inquire via WhatsApp">Back</a>
+                <a href="{{ '/contact?product={{ page.name | url_encode }}/' | relative_url }}" class="btn-buy">Inquire Now</a>
+                <a href="{{ '///' | relative_url }}" style="text-decoration: none;" class="btn-whatsapp" title="Inquire via WhatsApp">Back</a>
             </div>
         </div>
     </div>
