--- a/_layouts/product-details.html
+++ b/_layouts/product-details.html
@@ -370,7 +370,7 @@ layout: home
             </div>
 
             <div class="pd-action-block">
-                <a href="{{ '/contact?product={{ page.name | url_encode }}/' | relative_url }}" class="btn-buy">Inquire Now</a>
+                <a href="{{ '/contact/' | relative_url }}" class="btn-buy">Inquire Now</a>
                 <a href="{{ '///' | relative_url }}" style="text-decoration: none;" class="btn-whatsapp" title="Inquire via WhatsApp">Back</a>
             </div>
         </div>
