--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -8,6 +8,11 @@
 
     <meta name="google-site-verification" content="eFLCiVnqQwyVANM3-3gLyJtwpQhgTUXJjMCYDIfttA0" />
 
+    <meta property="og:title" content="Her Bird Boutique" />
+    <meta property="og:description" content="Welcome to Her Bird, the premier women's boutique for unique fashion finds. Browse our collection of stylish apparel and accessories. Free shipping available. Shop now!" />
+    <!-- <meta property="og:image" content="https://rinshad-gif.github.io/Her-Bird/assets/images/favicon.png" /> -->
+    <meta property="og:url" content="https://rinshad-gif.github.io/Her-Bird/" />
+
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
