--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -7,6 +7,11 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' 'unsafe-inline' data: blob: https:; script-src 'self' 'unsafe-eval' 'unsafe-inline' data: blob: https:; style-src 'self' 'unsafe-inline' https:;">
 
     <meta name="google-site-verification" content="eFLCiVnqQwyVANM3-3gLyJtwpQhgTUXJjMCYDIfttA0" />
+
+    <meta property="og:title" content="Her Bird Boutique" />
+    <meta property="og:description" content="Welcome to Her Bird, the premier women's boutique for unique fashion finds. Browse our collection of stylish apparel and accessories. Free shipping available. Shop now!" />
+    <!-- <meta property="og:image" content="https://rinshad-gif.github.io/Her-Bird/assets/images/favicon.png" /> -->
+    <meta property="og:url" content="https://rinshad-gif.github.io/Her-Bird/" />
     
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
