--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -144,6 +144,15 @@
 </script>
 {% endif %}
 
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-7PNG3K5747"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-7PNG3K5747');
+</script>
 
 </body>
 </html>
