--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,6 +20,9 @@
 
     <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
 
+    <link rel="icon" type="image/png" sizes="96x96" href="{{ '/favicon.png' | relative_url }}">
+    <link rel="apple-touch-icon" href="{{ '/favicon.png' | relative_url }}">
+
 </head>
 <body>
     {% include header.html %}
@@ -43,7 +46,7 @@
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-    
+
       gtag('config', 'G-7PNG3K5747');
     </script>
 
