--- a/_layouts/product-details.html
+++ b/_layouts/product-details.html
@@ -345,7 +345,7 @@ layout: home
                             {% if page.specifications.colors %}<li><strong>Colors:</strong> {{ page.specifications.colors }}</li>{% endif %}
                         </ul>
                         {% else %}
-                        <p>Fabric details available upon request.</p>
+                        <h2>Fabric details available upon request.</h2>
                         {% endif %}
                     </div>
                 </div>
