--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -11,10 +11,11 @@
 
     <meta name="google-site-verification" content="eFLCiVnqQwyVANM3-3gLyJtwpQhgTUXJjMCYDIfttA0" />
 
-    <meta property="og:title" content="Her Bird Boutique" />
-    <meta property="og:description" content="Welcome to Her Bird, the premier women's boutique for unique fashion finds. Browse our collection of stylish apparel and accessories. Free shipping available. Shop now!" />
-    <!-- <meta property="og:image" content="https://rinshad-gif.github.io/Her-Bird/assets/images/favicon.png" /> -->
-    <meta property="og:url" content="https://rinshad-gif.github.io/Her-Bird/" />
+    <meta property="og:title" content="Her Bird Boutique">
+    <meta property="og:description" content="Premium women’s fashion and elegant collections">
+    <meta property="og:image" content="{{ site.url }}/assets/images/og-image.png">
+    <meta property="og:url" content="{{ site.url }}{{ page.url }}">
+    <meta property="og:type" content="website">
 
     <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
 
