--- a/_includes/header.html
+++ b/_includes/header.html
@@ -17,7 +17,14 @@
                   </a>
                 </li>
                 {% endfor %}
+                <button id="searchBtn" class="nav-search-icon" aria-label="Search">
+                    <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                      <circle cx="11" cy="11" r="8"></circle>
+                      <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
+                    </svg>
+                </button>
               </ul>
+
             
             <!-- <div class="nav-utility">
                 <a href="/cart" class="utility-icon" aria-label="Shopping Cart">
