all sub urls connection removed and | relative_url removed

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,10 +13,10 @@
                 <div class="footer-column footer-col-links">
                     <h4 class="footer-title">Company</h4>
                     <ul class="footer-nav-list">
-                      <li><a href="{{ '/about/' | relative_url }}">About Her Bird Boutique</a></li>
-                      <li><a href="{{ '/contact/' | relative_url }}">Contact Her Bird</a></li>
-                      <li><a href="{{ '/products/' | relative_url }}">Women’s Fashion Collections</a></li>
-                      <li><a href="{{ '/exclusive-products/' | relative_url }}">Exclusive Couture Designs</a></li>
+                      <li><a href="/about/">About Her Bird Boutique</a></li>
+                      <li><a href="/contact/">Contact Her Bird</a></li>
+                      <li><a href="/products/">Women’s Fashion Collections</a></li>
+                      <li><a href="/exclusive-products/">Exclusive Couture Designs</a></li>
                     </ul>
                   </div>
 
