--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-                <a href="{{ '/' | relative_url }}">
+                <a href="/">
                     <span class="logo-main">Her</span><span class="logo-accent"> Bird</span>
                 </a>
             </div>
