--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -28,14 +28,15 @@
         {{ site.title }}
         {% endif %}
     </title>
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 
-    <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
+    <!-- <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}"> -->
 
-    <link rel="icon" type="image/png" sizes="96x96" href="{{ '/favicon.png' | relative_url }}">
-    <link rel="apple-touch-icon" href="{{ '/favicon.png' | relative_url }}">
+    <link rel="icon" type="image/png" href="/favicon.png">
+    <link rel="apple-touch-icon" href="/favicon.png">
+
 
     <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
@@ -49,10 +50,10 @@
     
     {% include footer.html %}
     
-    <script defer src="{{ '/assets/js/three.min.js' | relative_url }}"></script>
-    <script defer src="{{ '/assets/js/hero-animation.js' | relative_url }}"></script>
-    <script defer src="{{ '/assets/js/main.js' | relative_url }}"></script>
-    <script defer src="{{ '/assets/js/hero-gsap.js' | relative_url }}"></script>
+    <script defer src="/assets/js/three.min.js"></script>
+    <script defer src="/assets/js/hero-animation.js"></script>
+    <script defer src="/assets/js/main.js"></script>
+    <script defer src="/assets/js/hero-gsap.js"></script>
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <script defer src="https://identity.netlify.com/v1/netlify-identity-widget.js"></script>
 
@@ -69,39 +70,40 @@
 <!-- Organization schema -->
 
 <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "LocalBusiness",
-      "@id": "https://rinshad-gif.github.io/Her-Bird/#business",
-      "name": "Her Bird Boutique",
-      "url": "https://rinshad-gif.github.io/Her-Bird/",
-      "image": "https://rinshad-gif.github.io/Her-Bird/assets/images/logo.png",
-      "telephone": "7845235678",
-      "priceRange": "₹400–₹20000",
-      "address": {
-        "@type": "PostalAddress",
-        "streetAddress": "Kunnathery",
-        "addressLocality": "Ernakulam",
-        "postalCode": "683106",
-        "addressCountry": "IN"
-      },
-      "sameAs": [
-        "https://www.instagram.com/herbird",
-        "https://www.facebook.com/herbird"
-      ]
-    }
-    </script>
+  {
+    "@context": "https://schema.org",
+    "@type": "LocalBusiness",
+    "@id": "https://rinshad-gif.github.io/#business",
+    "name": "Her Bird Boutique",
+    "url": "https://rinshad-gif.github.io/",
+    "image": "https://rinshad-gif.github.io/assets/images/logo.png",
+    "telephone": "7845235678",
+    "priceRange": "₹400–₹20000",
+    "address": {
+      "@type": "PostalAddress",
+      "streetAddress": "Kunnathery",
+      "addressLocality": "Ernakulam",
+      "postalCode": "683106",
+      "addressCountry": "IN"
+    },
+    "sameAs": [
+      "https://www.instagram.com/herbird",
+      "https://www.facebook.com/herbird"
+    ]
+  }
+  </script>
+  
 
 <!-- Website schema -->
 
 <script type="application/ld+json">
-    {
-      "@context": "https://schema.org",
-      "@type": "WebSite",
-      "name": "Her Bird Boutique",
-      "url": "https://rinshad-gif.github.io/Her-Bird/"
-    }
-    </script>
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Her Bird Boutique",
+    "url": "https://rinshad-gif.github.io/"
+  }
+  </script>
 
 </body>
 </html>
