--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -9,10 +9,10 @@
     <meta name="google-site-verification" content="eFLCiVnqQwyVANM3-3gLyJtwpQhgTUXJjMCYDIfttA0" />
     
     <title>{{ page.title }} - {{ site.title }}</title>
-    <link rel="stylesheet" href="{{ '/assets/css/main.css' | relative_url }}">
+    <link rel="stylesheet" href="/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
 
-    <link rel="icon" type="image/png" href="{{ '/assets/images/favicon.png' | relative_url }}">
+    <link rel="icon" type="image/png" href="/favicon.png">
 
     <style>
 
@@ -30,7 +30,7 @@
     
     {% include footer.html %}
     
-    <script src="{{ '/assets/js/main.js' | relative_url }}"></script>
+    <script src="/assets/js/main.js"></script>
 
 
 <!-- Google tag (gtag.js) -->
@@ -54,13 +54,13 @@
         "@type": "ListItem",
         "position": 1,
         "name": "Home",
-        "item": "{{ site.url }}{{ site.baseurl }}/"
+        "item": "{{ site.url }}/"
       },
       {
         "@type": "ListItem",
         "position": 2,
         "name": "{{ page.title }}",
-        "item": "{{ page.url | absolute_url }}"
+        "item": "{{ site.url }}/"
       }
     ]
   }
