--- a/_layouts/schema-product.html
+++ b/_layouts/schema-product.html
@@ -31,19 +31,19 @@
           "@type": "ListItem",
           "position": 1,
           "name": "Home",
-          "item": "{{ site.url }}{{ site.baseurl }}/"
+          "item": "{{ site.url }}/"
         },
         {
           "@type": "ListItem",
           "position": 2,
           "name": "Products",
-          "item": "{{ site.url }}{{ site.baseurl }}/products/"
+          "item": "{{ site.url }}/"
         },
         {
           "@type": "ListItem",
           "position": 3,
           "name": {{ page.name | jsonify }},
-          "item": "{{ page.url | absolute_url }}"
+          "item": "{{ site.url }}/"
         }
       ]
     }
