--- a/_layouts/product-details.html
+++ b/_layouts/product-details.html
@@ -1,4 +1,4 @@
----
+<!-- ---
 layout: home
 ---
 
@@ -397,4 +397,4 @@ document.addEventListener('DOMContentLoaded', () => {
         });
     });
 });
-</script>
+</script> -->
