--- a/_includes/header.html
+++ b/_includes/header.html
@@ -10,20 +10,21 @@
             <ul class="nav-menu">
                 {% for item in site.data.navigation %}
                 <li class="nav-item">
-                  <a href="{{ item.link | relative_url }}"
+                  <a href="{{ item.link }}" 
                      class="nav-link"
                      {% if item.new_tab %}target="_blank" rel="noopener noreferrer"{% endif %}>
                     {{ item.name }}
                   </a>
                 </li>
                 {% endfor %}
-                <button id="searchBtn" type="button" class="nav-search-icon" aria-label="Search">
+                
+                <button id="searchBtn" class="nav-search-icon" aria-label="Search">
                     <svg xmlns="http://www.w3.org/2000/svg" width="18" height="18" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                       <circle cx="11" cy="11" r="8"></circle>
                       <line x1="21" y1="21" x2="16.65" y2="16.65"></line>
                     </svg>
                 </button>
-              </ul>
+            </ul>
 
             
             <!-- <div class="nav-utility">
