--- a/_layouts/page.html
+++ b/_layouts/page.html
@@ -8,12 +8,15 @@
     <meta http-equiv="Content-Security-Policy" content="default-src 'self' 'unsafe-eval' 'unsafe-inline' data: blob: https:; script-src 'self' 'unsafe-eval' 'unsafe-inline' data: blob: https:; style-src 'self' 'unsafe-inline' https:;">
 
     <meta name="google-site-verification" content="eFLCiVnqQwyVANM3-3gLyJtwpQhgTUXJjMCYDIfttA0" />
+    <meta name="description" content="{% if page.description %}{{ page.description }}{% else %}{{ site.description }}{% endif %}">
     
     <title>{{ page.title }} - {{ site.title }}</title>
     <link rel="stylesheet" href="/assets/css/main.css">
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@400;700&family=Raleway:wght@300;400;600&display=swap" rel="stylesheet">
 
     <link rel="icon" type="image/png" href="/favicon.png">
+
+    <link rel="canonical" href="{{ site.url }}{{ page.url }}">
 
     <style>
 
