--- a/_layouts/home.html
+++ b/_layouts/home.html
@@ -84,7 +84,7 @@
       "@context": "https://schema.org",
       "@type": "WebSite",
       "name": "Her Bird",
-      "url": "{{ site.url }}/",
+      "url": "{{ site.url }}/"
     }
     </script>
     {% endif %}
