--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -33,6 +33,11 @@ html {
 
 .page-content h1 {
     text-align: center;
+    position: absolute;
+    left: -9999px;
+    width: 1px;
+    height: 1px;
+    overflow: hidden;
 }
 
 body {
